--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
-    "pdfkit": "^0.17.2",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.34.2"
+    "pdfkit": "^0.17.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
